<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="blog.globalquality.hutapp.Main4Activity">
<RelativeLayout
    android:layout_width="304dp"
    android:layout_height="437dp"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">
    <ImageView
        android:id="@+id/logoSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/cmclogosmall" />
    <TextView
        android:id="@+id/hut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/hut"/>
    <TextView
        android:id="@+id/genInfo"
        android:layout_below="@id/logoSmall"
        android:padding="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genInfo"/>
    <TextView
        android:layout_below="@id/genInfo"
        android:padding="2sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="12sp"
        android:paddingBottom="10sp"
        android:text="@string/copyRight"/>
</RelativeLayout>
</android.support.constraint.ConstraintLayout>
